[metadata]
name = Novexity
version = 0.7
author = NorkzYT
description = Scrape Google Search Results Fast and Easy ✨
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NorkzYT/Novexity

[options]
packages = find:
install_requires =
    beautifulsoup4
    requests
    python-dotenv
    requests_ip_rotator

[options.packages.find]
exclude =
    tests
