[metadata]
name = Novexity
version = 1.0.5
author = NorkzYT
description = Freely Scrape Google Search Results Fast and Easy ✨
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NorkzYT/Novexity

[options]
packages = find:
install_requires =
    beautifulsoup4
    requests
    boto3
    aiobotocore
    aioboto3
[options.packages.find]
exclude =
    tests
